[jupyter] Lazy Theta Star hitl launch instructions.

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "source": [
     "<a id='intro'></a>\n",
-    "##### 1.A Why the problem is important"
+    "#### 1.A Why the problem is important"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "metadata": {},
    "source": [
     "<a id='stateOfTheArt'></a>\n",
-    "##### 1.B What is lacking in the current knowledge / State of the art"
+    "#### 1.B What is lacking in the current knowledge / State of the art"
    ]
   },
   {
@@ -53,7 +53,9 @@
    "source": [
     "Not comparing with MoveIt! because it is built for robotic arms and it would be a study in it's own right to find out the proper parameters. A nice playlist of intro videos exists. https://www.youtube.com/playlist?list=PLz8Xi5I9bhzKuFfcQxWvMm9sVCR5Wng90 \n",
     "\n",
-    "Another option is to use the underlying OMPL. But the obstacle avoidance is in MoveIt! ."
+    "Another option is to use the underlying OMPL. But the obstacle avoidance is in MoveIt! .\n",
+    "\n",
+    "Metrics from Helen and Lactombe 2002."
    ]
   },
   {
@@ -61,7 +63,7 @@
    "metadata": {},
    "source": [
     "<a id='researchQuestion'></a>\n",
-    "##### 1.C Objectives of the study & research question"
+    "#### 1.C Objectives of the study & research question"
    ]
   },
   {
@@ -77,7 +79,7 @@
    "metadata": {},
    "source": [
     "<a id='contribution'></a>\n",
-    "##### 1.D Contribution"
+    "#### 1.D Contribution"
    ]
   },
   {
@@ -98,33 +100,67 @@
    "metadata": {},
    "source": [
     "<a id='installation'></a>\n",
-    "##### Installation"
+    "#### 2.A Installation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "There are 3 environments with px4: sitl, hitl and real world.\n",
+    "The instructions for installation are :\n",
+    "- stil  [Gazebo simulation - Try 9](Paper%20-%20Exploration%20real%20world.ipynb#try9)\n",
+    "- hitl [Hardware in the loop - Try 2 just upboard and laptop (no docker)](Paper%20-%20Exploration%20real%20world.ipynb#hitl)\n",
+    "- real world [Hardware Setup - Try 2 CATEC](Paper%20-%20Exploration%20real%20world.ipynb#try2_catec)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<a id='run'></a>\n",
-    "##### Run"
+    "#### 2.B Run"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "###### Hardware in the Loop (HitL)\n",
+    "          \n",
+    "1. **Laptop** Setup basics for px4 simulation\n",
+    "    1. `cd ~/src/Firmware`\n",
+    "    1. `source /opt/ros/kinetic/setup.bash`\n",
+    "    1. `source ~/Flying_Octomap_code/devel/setup.bash`\n",
+    "    1. `source Tools/setup_gazebo.bash ~/src/Firmware ~/src/Firmware/build/posix_sitl_default`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware/Tools/sitl_gazebo`\n",
+    "    1. `cp ~/Flying_Octomap_code/src/architecture/Tools/iris.xacro ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "    1. `cp ~/Flying_Octomap_code/src/architecture/Tools/iris_base.xacro ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "    1. `python ~/src/Firmware/Tools/sitl_gazebo/scripts/xacro.py -o ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/home/garuda/src/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
+    "    1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
+    "    1. `export ROS_IP=192.168.6.77`\n",
+    "    1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
+    "\n",
+    "1. **UpBoard** Launch code\n",
+    "\n",
+    "    1. `export ROS_IP=192.168.6.231`\n",
+    "    1. `roslaunch architecture posix_hitl_upboard.launch`\n",
+    "\n",
+    "1. **Laptop** Launch px4 simulation (2 terminals)\n",
+    "    1. `cd ~/src/Firmware`\n",
+    "    1. `roslaunch architecture posix_hitl_docker.launch`\n",
+    "    1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`  \n",
+    "        \n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<a id='studyDesign'></a>\n",
-    "##### Study Design"
+    "#### 2.C Study Design"
    ]
   },
   {
@@ -145,7 +181,7 @@
    "metadata": {},
    "source": [
     "<a id='studyVariables'></a>\n",
-    "##### Study Variables"
+    "#### 2.D Study Variables"
    ]
   },
   {
