--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -143,7 +143,7 @@
     "    1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
     "\n",
     "1. **UpBoard** Launch code\n",
-    "\n",
+    "    1. `source ~/ros_ws/devel/setup.bash`\n",
     "    1. `export ROS_IP=192.168.6.231`\n",
     "    1. `roslaunch architecture posix_hitl_upboard.launch`\n",
     "\n",
