--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -151,6 +151,17 @@
     "    1. `cd ~/src/Firmware`\n",
     "    1. `roslaunch architecture posix_hitl_docker.launch`\n",
     "    1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`  \n",
+    "\n",
+    "1. **Laptop** Launch rviz\n",
+    "    1. `cd ~/src/Firmware`\n",
+    "    1. `source /opt/ros/kinetic/setup.bash`\n",
+    "    1. `source ~/Flying_Octomap_code/devel/setup.bash`\n",
+    "    1. `source Tools/setup_gazebo.bash ~/src/Firmware ~/src/Firmware/build/posix_sitl_default`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware/Tools/sitl_gazebo` \n",
+    "    1. `export ROS_IP=192.168.6.77`\n",
+    "    1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
+    "    1. `rviz`\n",
     "        \n",
     "    \n"
    ]
