[jupyter] Sensor modeling

--- a/_generate_plots/Paper - Exploration real world.ipynb
+++ b/_generate_plots/Paper - Exploration real world.ipynb
@@ -1783,6 +1783,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###### Sensor model rectangle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " I also wanted to know if you know of examples of geometric modeling of the reach of the sensor to sample within the sensor swath.\n",
+    " This is the swath generated when going in a straight line from one waypoint to the next.\n",
+    " The disc is always perpendicular to the straight line that is the trajectory between two waypoints. this disk is also tilted 50º upwards.\n",
+    " \n",
+    " There is a fair amount of details to be thought of here and I'm only now starting to dive into it so was wondering what are your first thoughts on using the approach of using the octomap resolution like in the free corridor :\n",
+    " - X, Y, Z bounds. Project the tilted disc into a rectangle in XZ in the UAV coordinate frame, where positive x is forward. The rectangle would be centered on the UAV.\n",
+    " - Discretization. Using octomap resolution (as it is done for the flight corridor) does not scale well to a 23x30m corridor. (the Hokuyo has 15m range and is tilted, with the projection into YZ the disc turns into ellipsoid). It needs ~2771 raycasts to cover everything (height * length / octomap_resolution).       \n",
+    "      This is an operation that I'll be doing to calculate node heuristics so it has to be super fast.      \n",
+    "      If I cut a few corners and reduce the corridor to 18 x 24 m centered on the UAV (which has the benefit of avoiding voxels outside of the sensor range because the ellipsoid is being approximated with a rectangle) I lower the raycast count to ~1774. Which is still a bit high.        \n",
+    "      Another thing I ?can? relax is the discretization resolution, by using double the octomap resolution I get to ~551. \n",
+    " - Disk dent. I'm not sure if it is worth it or not to keep all the time checking for the dent. I was think of checking this with polar coordinates like Angle = arctan(y/x); Radius = sqrt(x * x + y * y) and finally checking the angle.\n",
+    " \n",
+    "Need to decide: \n",
+    "- is the discretization step too big? \n",
+    "- Is there a better model for sampling that is still deterministic? \n",
+    "- Assuming ~550 ray casts to take around 50millis, reasonable? \n",
+    "- Disk dent - worth it to include in the model?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sparse Ratio 2\n",
+      "sparse_sampling_resolution 0.8\n",
+      "== Karting ==\n",
+      "laser range = 9.32926829416 m\n",
+      "yz range    = 7.14663637791 m\n",
+      "- Full sensor model.     14.2932727558 x 18.6585365883\n",
+      "ray casts   = 666.728881703\n",
+      "- Subset of laser model. 11.4346182046 x 14.9268292707\n",
+      "ray casts   = 426.70648429\n",
+      "- Sparse sampling of model. \n",
+      "ray casts   = 213.353242145\n",
+      "== Actinia ==\n",
+      " octomap resolution = 0.248780487844 m\n",
+      " laser range = 15 m\n",
+      " yz range    = 11.4906702528 m\n",
+      " - Full sensor model.     22.9813405057 x 30\n",
+      " ray casts   = 2771.27929584\n",
+      " - Subset of laser model. 18.3850724046 x 24.0\n",
+      " ray casts   = 1773.61874934\n",
+      " - Sparse sampling of model.\n",
+      " ray casts   = 551.552172137\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "experiment_scaling = 1.607843137\n",
+    "octomap_resolution = 0.4\n",
+    "sensor_model_scale = 0.2\n",
+    "sparse_ratio = 2\n",
+    "sparse_sampling_resolution = (octomap_resolution*sparse_ratio)\n",
+    "print \"Sparse Ratio \" + str(sparse_ratio) \n",
+    "print \"sparse_sampling_resolution \" + str(sparse_sampling_resolution)\n",
+    "# Karting\n",
+    "print \"== Karting ==\"\n",
+    "laser_range = 15 / experiment_scaling\n",
+    "print \"laser range = \" + str(laser_range ) + \" m\"\n",
+    "\n",
+    "laser_tilt = 0.872665\n",
+    "yz_reach = laser_range*math.sin(laser_tilt)\n",
+    "print \"yz range    = \" + str(yz_reach) + \" m\"\n",
+    "\n",
+    "height = yz_reach * 2\n",
+    "length = laser_range * 2\n",
+    "print \"- Full sensor model.     \" + str(height) + \" x \" + str(length)\n",
+    "print \"ray casts   = \" + str(height*length/octomap_resolution)\n",
+    "height = height - (height*sensor_model_scale)\n",
+    "length = length - (length*sensor_model_scale)\n",
+    "print \"- Subset of laser model. \" + str(height) + \" x \" + str(length)\n",
+    "print \"ray casts   = \" + str(height*length/octomap_resolution)\n",
+    "print \"- Sparse sampling of model. \"\n",
+    "print \"ray casts   = \" + str(height*length/ sparse_sampling_resolution  )\n",
+    "\n",
+    "\n",
+    "#Actinia\n",
+    "print \"== Actinia ==\"\n",
+    "octomap_resolution = octomap_resolution / experiment_scaling\n",
+    "print \" octomap resolution = \" + str( octomap_resolution ) + \" m\"\n",
+    "\n",
+    "laser_range = 15 \n",
+    "print \" laser range = \" + str(laser_range ) + \" m\"\n",
+    "\n",
+    "laser_tilt = 0.872665\n",
+    "yz_reach = laser_range*math.sin(laser_tilt)\n",
+    "print \" yz range    = \" + str(yz_reach) + \" m\"\n",
+    "\n",
+    "height = yz_reach * 2\n",
+    "length = laser_range * 2\n",
+    "print \" - Full sensor model.     \" + str(height) + \" x \" + str(length)\n",
+    "print \" ray casts   = \" + str(height*length/octomap_resolution)\n",
+    "height = height - (height*sensor_model_scale)\n",
+    "length = length - (length*sensor_model_scale)\n",
+    "print \" - Subset of laser model. \" + str(height) + \" x \" + str(length)\n",
+    "print \" ray casts   = \" + str(height*length/octomap_resolution)\n",
+    "print \" - Sparse sampling of model.\" \n",
+    "print \" ray casts   = \" + str(height*length/ sparse_sampling_resolution  )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='Implementation'></a>\n",
     "# Implementation details\n",
     "Check from JINT"
