--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -92,7 +92,13 @@
     "    - Free space corridor\n",
     "    - Start & goal in same voxel\n",
     "    - Unknown space as obstacle?\n",
-    "    - Scale?"
+    "    - Scale?\n",
+    "    \n",
+    "- In case of Information Gain\n",
+    "    - Show with the sensor specs that the error os measurements is uniform throuhout the langer range.\n",
+    "    - [Disc area](https://www.mathopenref.com/arcsector.html)\n",
+    "    - [Is point part of arc](https://stackoverflow.com/questions/6270785/how-to-determine-whether-a-point-x-y-is-contained-within-an-arc-section-of-a-c)\n",
+    "    "
    ]
   },
   {
