--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -151,7 +151,7 @@
     "1. **UpBoard** Launch code\n",
     "    1. `source ~/ros_ws/devel/setup.bash`\n",
     "    1. `export ROS_IP=192.168.6.231`\n",
-    "    1. `roslaunch architecture posix_hitl_upboard.launch`\n",
+    "    1. `roslaunch architecture hitl_upboard_architecture.launch`\n",
     "\n",
     "1. **Laptop** Launch px4 simulation (2 terminals)\n",
     "    1. `cd ~/src/Firmware`\n",
@@ -190,7 +190,9 @@
     "\n",
     "20 runs from bag the see more statistically results.\n",
     "\n",
-    "Run around 3 in real life. Try to be with same flight."
+    "Run around 3 in real life. Try to be with same flight.\n",
+    "\n",
+    "Parameter sweep."
    ]
   },
   {
@@ -208,7 +210,8 @@
     "- Computation time\n",
     "- RAM\n",
     "- Path length free space\n",
-    "- Path lenght w/ obstacles: compare with manual measurement."
+    "- Path lenght w/ obstacles: compare with manual measurement.\n",
+    "- Failure percentage."
    ]
   },
   {
