--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -211,7 +211,17 @@
     "- RAM\n",
     "- Path length free space\n",
     "- Path lenght w/ obstacles: compare with manual measurement.\n",
-    "- Failure percentage."
+    "- Failure percentage.\n",
+    "\n",
+    "**Run plotly**\n",
+    "1. Installation\n",
+    "    1. `pip install plotly`\n",
+    "    1. `pip install cufflinks`\n",
+    "1. Run frontier extraction for box plots\n",
+    "    1. `cd ~/Flying_Octomap_code/_generate_plots`\n",
+    "    1. `python`\n",
+    "    1. `variables= {}`\n",
+    "    1. `execfile( \"compare_box_graphs.py\", variables )`"
    ]
   },
   {
