[jupyter] Notes to generate neighbors taking into account security margin.

--- a/_generate_plots/Paper - Exploration real world.ipynb
+++ b/_generate_plots/Paper - Exploration real world.ipynb
@@ -1572,23 +1572,6 @@
     "    - px4 simulation. Direct the mavros stream to UAV with distributed ros\n",
     "\n",
     "1. Simulation setup **@ laptop**\n",
-    "    2. **Laptop** Build docker image\n",
-    "        1. `cd ~/Flying_Octomap_code/src/_docker`\n",
-    "        1. `docker build -t garuda_pixhawk .` \n",
-    "        1. :( `docker network create --subnet=192.168.6.0/24 rocketUAVnet`\n",
-    "        1. `docker run -it --privileged \\\n",
-    "        -v ~/Firmware:/Firmware:rw \\\n",
-    "        -v ~/Flying_Octomap_code/src:/ros_ws/src:rw \\\n",
-    "        -v /tmp/.X11-unix:/tmp/.X11-unix:ro \\\n",
-    "        -e DISPLAY=:0 \\\n",
-    "        --network=\"host\" \\\n",
-    "        --name=garuda_pixhawk_hil garuda_pixhawk /bin/bash`\n",
-    "    3. **Laptop** Launch docker\n",
-    "        1. `xhost +`\n",
-    "        1. exit\n",
-    "        1. `docker start garuda_pixhawk_hil`\n",
-    "        1. `docker exec -u 0 -it garuda_pixhawk_hil bash`\n",
-    "                \n",
     "    1. **Laptop** Build px4 simulation\n",
     "        1. Build ros workspace\n",
     "            1. (First time) Make ros workspace:\n",
@@ -2027,7 +2010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11+"
   }
  },
  "nbformat": 4,
