--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -93,7 +93,7 @@
     "    - Start & goal in same voxel\n",
     "    - Unknown space as obstacle?\n",
     "    - Scale?\n",
-    "    \n",
+    "    - Security margin & neighbor generation\n",
     "- In case of Information Gain\n",
     "    - Show with the sensor specs that the error os measurements is uniform throuhout the langer range.\n",
     "    - [Disc area](https://www.mathopenref.com/arcsector.html)\n",
@@ -105,6 +105,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Security margin & neighbor generation** \n",
+    "\n",
+    "Using security margin to generate neighbors instead of octree resolution. [for calculations look in spreadsheet](https://docs.google.com/spreadsheets/d/1c4LzxBBLpTx6qQF26tpFr8tkmEM5zIi43MLb72PWlvE/edit#gid=0) \n",
+    "\n",
+    "When there is a large mismatch between security margin and the resolution there is no point generating neighbors for maximum resolution steps when most of them will be discarded. \n",
+    "\n",
+    "Instead a variable fraction of the security margin (this can be explored - know what is the amount of paths that cannot be found with this that can be found with resolution) (having as minimum lenght the octree resolution) will be sampled for neighbors. \n",
+    "\n",
+    "This reduces the number of neighbors while scaling with the size of the voxel. Using the actual size of the neighbors did not in fact reduce computation time because if bookkeeping. \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "<a id='installation'></a>\n",
     "#### 2.A Installation"
    ]
@@ -117,6 +134,27 @@
     "The instructions for installation are :\n",
     "- stil  [Gazebo simulation - Try 9](Paper%20-%20Exploration%20real%20world.ipynb#try9)\n",
     "- hitl [Hardware in the loop - Try 2 just upboard and laptop (no docker)](Paper%20-%20Exploration%20real%20world.ipynb#hitl)\n",
+    "    1. In laptop Firmware\n",
+    "        1. Install mavros-extras\n",
+    "        1. `cd ~`\n",
+    "        1. `wget https://raw.githubusercontent.com/PX4/Devguide/master/build_scripts/ubuntu_sim_ros_gazebo.sh`\n",
+    "        1. `chmod +x ubuntu_sim_ros_gazebo.sh`\n",
+    "        2. `source ubuntu_sim_ros_gazebo.sh`\n",
+    "        1. `git checkout v1.7.0-rc4`\n",
+    "        1. `make posix_sitl_default gazebo`\n",
+    "        1. `source ~/Flying_Octomap_code/devel/setup.bash`\n",
+    "        1. `source Tools/setup_gazebo.bash ~/src/Firmware ~/src/Firmware/build/posix_sitl_default`\n",
+    "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware`\n",
+    "        1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware/Tools/sitl_gazebo`\n",
+    "        1. `cp ~/Flying_Octomap_code/src/architecture/Tools/iris.xacro ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "        1. `cp ~/Flying_Octomap_code/src/architecture/Tools/iris_base.xacro ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "        1. `python ~/src/Firmware/Tools/sitl_gazebo/scripts/xacro.py -o ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/home/mfaria/src/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
+    "        1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
+    "        1. `export ROS_IP=192.168.6.77`\n",
+    "        1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
+    "    1. In Upboard add `192.168.6.77 garuda` to `/etc/hosts`\n",
+    "\n",
+    "\n",
     "- real world [Hardware Setup - Try 2 CATEC](Paper%20-%20Exploration%20real%20world.ipynb#try2_catec)"
    ]
   },
@@ -211,7 +249,9 @@
     "- RAM\n",
     "- Path length free space\n",
     "- Path lenght w/ obstacles: compare with manual measurement.\n",
-    "- Failure percentage.\n",
+    "- Failure percentage\n",
+    "    - Naive max resolution neighbors\n",
+    "    - Different fractions of security margin\n",
     "\n",
     "**Run plotly**\n",
     "1. Installation\n",
@@ -248,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11+"
   }
  },
  "nbformat": 4,
