[jupyter] On neighbors margin.

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -113,7 +113,10 @@
     "\n",
     "Instead a variable fraction of the security margin (this can be explored - know what is the amount of paths that cannot be found with this that can be found with resolution) (having as minimum lenght the octree resolution) will be sampled for neighbors. \n",
     "\n",
-    "This reduces the number of neighbors while scaling with the size of the voxel. Using the actual size of the neighbors did not in fact reduce computation time because if bookkeeping. \n",
+    "This reduces the number of neighbors while scaling with the size of the voxel. \n",
+    "It is not possible to use this method of neighbor generation for both UpdateVertex and in the main loop because during the implementation of the algorithm the assumption that every maximum.\n",
+    "\n",
+    "(Sparse version) Using the actual size of the neighbors did not in fact reduce computation time because if bookkeeping. \n",
     "    "
    ]
   },
