[rosbag] filter attempts

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -217,6 +217,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Extract data from bag**\n",
+    "\n",
+    "`rosbag filter 20180731_12_record_all_manualExploration_PathNotFound.bag 20180731_12_record_all_manualExploration_PathNotFound_positioning_data.bag \"topic == '/tf' or topic == '/scan' or topic == '/mavros/global_position/local' or topic == '/mavros/global_position/global' or topic == '/tf' or topic == '/mavros/global_position/local' or topic == '/mavros/global_position/global' or topic == '/mavros/setpoint_position/local' or topic == '/position_log'\"`\n",
+    "\n",
+    "\n",
+    "`rosbag filter 20180731_12_record_all_manualExploration_PathNotFound.bag 20180731_12_record_all_manualExploration_PathNotFound_positioning_data.bag \"topic == '/tf' or topic == '/scan' or topic == '/mavros/global_position/local' or topic == '/mavros/global_position/global' or topic == '/tf' or topic == '/mavros/global_position/local' or topic == '/mavros/global_position/global' or topic == '/mavros/setpoint_position/local' or topic == '/position_log'  or topic == '/scan'\"`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='studyDesign'></a>\n",
     "#### 2.C Study Design"
    ]
