[jupyter] Instructions to ccreate bt file.

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -217,12 +217,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Extract data from bag**\n",
-    "\n",
-    "`rosbag filter 20180731_12_record_all_manualExploration_PathNotFound.bag 20180731_12_record_all_manualExploration_PathNotFound_positioning_data.bag \"topic == '/tf' or topic == '/scan' or topic == '/mavros/global_position/local' or topic == '/mavros/global_position/global' or topic == '/tf' or topic == '/mavros/global_position/local' or topic == '/mavros/global_position/global' or topic == '/mavros/setpoint_position/local' or topic == '/position_log'\"`\n",
-    "\n",
-    "\n",
-    "`rosbag filter 20180731_12_record_all_manualExploration_PathNotFound.bag 20180731_12_record_all_manualExploration_PathNotFound_positioning_data.bag \"topic == '/tf' or topic == '/scan' or topic == '/mavros/global_position/local' or topic == '/mavros/global_position/global' or topic == '/tf' or topic == '/mavros/global_position/local' or topic == '/mavros/global_position/global' or topic == '/mavros/setpoint_position/local' or topic == '/position_log'  or topic == '/scan'\"`"
+    "**Valid bag data**\n",
+    "1. Experimenting \n",
+    "    1. run realUav_laptop_monitor.launch\n",
+    "1. Generate octree\n",
+    "    1. Filter to exclude frontier and Lazy theta Star messages `rosbag filter 20180731_12_record_all_manualExploration_PathNotFound.bag 20180731_12_record_all_manualExploration_PathNotFound_scan.bag \"topic == '/tf' or topic == '/scan' or topic == '/mavros/global_position/local' or topic == '/mavros/global_position/global' or topic == '/tf' or topic == '/mavros/global_position/local' or topic == '/mavros/global_position/global' or topic == '/mavros/setpoint_position/local' or topic == '/position_log'  or topic == '/scan'\"`\n",
+    "    1. Make sure that async node is in STANDALONE mode and not savig csv files (defines)\n",
+    "    1. laptop@Terminal 1 `roslaunch architecture hitl_laptop_saveOctomap.launch`\n",
+    "    1. laptop@Terminal 2 `rosbag play 20180731_12_record_all_manualExploration_PathNotFound_scan.bag  -r 20`\n",
+    "    1. laptop@Terminal 3 `rosrun octomap_server octomap_saver karting.bt`\n",
+    "    1. Verify octree file `octovis karting.bt`\n",
+    "1. Use octree with rviz\n"
    ]
   },
   {
