[jupyter] Instructions for real fight.

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -217,6 +217,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Real Flight**\n",
+    "\n",
+    "1. **Laptop** Setup basics for UAV model in gazebo & ips\n",
+    "    1. `cd ~/src/Firmware`\n",
+    "    1. `source /opt/ros/kinetic/setup.bash`\n",
+    "    1. `source ~/Flying_Octomap_code/devel/setup.bash`\n",
+    "    1. `source Tools/setup_gazebo.bash ~/src/Firmware ~/src/Firmware/build/posix_sitl_default`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware/Tools/sitl_gazebo`\n",
+    "    1. `export ROS_IP=192.168.6.77`\n",
+    "    1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
+    "\n",
+    "1. **UpBoard** Launch code\n",
+    "    1. `source ~/ros_ws/devel/setup.bash`\n",
+    "    1. `export ROS_IP=192.168.6.231`\n",
+    "    1. `roslaunch architecture realUav_upboard_px4comms.launch`\n",
+    "    1. `roslaunch architecture realUav_upboard_path_command.launch`\n",
+    "\n",
+    "1. **Laptop** Setup basics for UAV model in gazebo & ips, Launch rviz\n",
+    "    1. `cd ~/src/Firmware`\n",
+    "    1. `source /opt/ros/kinetic/setup.bash`\n",
+    "    1. `source ~/Flying_Octomap_code/devel/setup.bash`\n",
+    "    1. `source Tools/setup_gazebo.bash ~/src/Firmware ~/src/Firmware/build/posix_sitl_default`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware/Tools/sitl_gazebo` \n",
+    "    1. `export ROS_IP=192.168.6.77`\n",
+    "    1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
+    "    1. `roslaunch architecture realUav_laptop_monitor.launch`\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Valid bag data**\n",
     "1. Experimenting \n",
     "    1. run realUav_laptop_monitor.launch\n",
