[jupyter] Rviz markers caption.

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -196,7 +196,7 @@
     "\n",
     "1. **Laptop** Launch px4 simulation (2 terminals)\n",
     "    1. `cd ~/src/Firmware`\n",
-    "    1. `roslaunch architecture posix_hitl_docker.launch`\n",
+    "    1. `roslaunch architecture hitl_laptop_px4_simulation.launch`\n",
     "    1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`  \n",
     "\n",
     "1. **Laptop** Launch rviz\n",
@@ -245,7 +245,17 @@
     "    1. `export ROS_IP=192.168.6.77`\n",
     "    1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
     "    1. `roslaunch architecture realUav_laptop_monitor.launch`\n",
-    "        "
+    "    1. get points: `rostopic echo /mavros/global_position/local` `rosrun tf tf_echo /map /base_link`\n",
+    "    1. send path request: `rostopic pub /ltstar_request path_planning_msgs/LTStarRequest`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Debug path on saved octree**\n",
+    "1. `roslaunch architecture debug_lazyThetaStar.launch`\n",
+    "1. `rosrun octomap_server octomap_server_node src/path_planning/test/data/d.bt _publish_free_space:=true`"
    ]
   },
   {
@@ -263,6 +273,28 @@
     "    1. laptop@Terminal 3 `rosrun octomap_server octomap_saver karting.bt`\n",
     "    1. Verify octree file `octovis karting.bt`\n",
     "1. Use octree with rviz\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Interpret RVIZ**\n",
+    "\n",
+    "- Topic /ltstar_path. Maker array.\n",
+    "    - Input\n",
+    "        - start: small sphere (0.2m)         The exact start point lazyThetaStar_ method received.\n",
+    "        - goal: small sphere (0.2m)          The exact goal  point lazyThetaStar_ method received.\n",
+    "        - start_voxel: cube (size of voxel)  Voxel containing the start point.\n",
+    "        - goal_voxel : cube (size of voxel)  Voxel containing the goal  point.\n",
+    "    - Algorithm variables:\n",
+    "        - s     : ?                          The center of the voxels analyzed (s pseudocode variable)\n",
+    "        - closed: small green spheres (0.1m) The center of the voxels analyzed (s pseudocode variable)\n",
+    "    - Output\n",
+    "        - lazy_theta_star_path: series of yellow arrows that show the desired path. i.e.: straight lines between waypoints/voxel centers.\n",
+    "        - lazy_theta_star_wayoint: purple transparent cubes (size of voxel) Voxel containing each waypoint.\n",
+    "        - straight_line: (??lilac if found path, white otherwise) arrow from start to goal.\n",
+    "        "
    ]
   },
   {
