[ltstar] Putting the obstacle avoidance journey into words...

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -124,6 +124,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Obstacle avoidance**\n",
+    "\n",
+    "98% of the program is spent on this. [Insert reference to data](#obstacleAvoidanceTime).\n",
+    "\n",
+    "Because of this observation the method used to check is ray casting instead of generate keys.\n",
+    "How it is done:\n",
+    "- The start and end point are taken as central points of a rectangle of sides equal to the security margin.\n",
+    "- The rectangle is discretised into intervals equal to the resolution of the octree.\n",
+    "- As if lines from each descritization in the start rectangle to the corresponding end retangle.\n",
+    "Efforts done to reduce:\n",
+    "- Reduce neighbor amount to have less line of sight checks to do. Only add to unordered_set after reducing coordinates to cell center. In this way using the sparseness of the tree.\n",
+    "- Change how the obstacles are checked:\n",
+    "    - Previously, 3 nested loops checking fragments of the lines. Discretizing in x, y and z.\n",
+    "    - New approach, only discretize in x and z. Find the yaw and roll angles to make rectangles paralell and orthogonal to the line (start - end). Rotate points. Cast a ray between each corresponding point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='obstacleAvoidanceTime'></a>\n",
+    "98% of the program is spent on this.\n",
+    "The supporting evidence\n",
+    "\n",
+    "    [ RUN      ] LazyThetaStarTests.Key_ObstacleAvoidance_original\n",
+    "    [ WARN] [1534273951.527433510]: [Vanilla] at iteration 574 open size is 368\n",
+    "    [ WARN] [1534273951.560607142]: [ltstar] [vanilla] Total time 54598395 microseconds.\n",
+    "    [ WARN] [1534273951.560640783]: [ltstar] [vanilla] generate_neighbors_time took 6153 - 0%\n",
+    "    [ WARN] [1534273951.560654440]: [ltstar] [vanilla] obstacle_avoidance_time took 54504789 - 99.8286% \n",
+    "    [ WARN] [1534273951.560662061]: [ltstar] [vanilla] setVertex_time took 14894753 - 27%\n",
+    "    [ WARN] [1534273951.560681199]: [ltstar] [vanilla] updateVertex_time took 15415 - 0%\n",
+    "    [ WARN] [1534273951.560686663]: [ltstar] [vanilla] obstacle_avoidance_calls count 6362\n",
+    "    [       OK ] LazyThetaStarTests.Key_ObstacleAvoidance_original (54706 ms)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "<a id='installation'></a>\n",
     "#### 2.A Installation"
