[lstar] Conclusions from the trial.

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -124,6 +124,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Obstacle avoidance - point generation**\n",
+    "\n",
+    "Try the method using the cross product to generate an orthogonal vector. Can be pre generated at start and then applied to each point.\n",
+    "\n",
+    "Add more distance to make sure of the margins also forward."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Filter laser**\n",
+    "\n",
+    "The laser points aren't integrated fast engough to use a resolution of 0.2 in the ocotmap.     \n",
+    "Look into the filetring process to make it faster."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Octomap diverges when receiving much information for an area**\n",
+    "\n",
+    "Could be because of outliars.\n",
+    "Look into filtering. A good option could be median with a window around 3 to 5 points."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "<a id='installation'></a>\n",
     "#### 2.A Installation"
@@ -246,7 +277,11 @@
     "    1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
     "    1. `roslaunch architecture realUav_laptop_monitor.launch`\n",
     "    1. get points: `rostopic echo /mavros/global_position/local` `rosrun tf tf_echo /map /base_link`\n",
-    "    1. send path request: `rostopic pub /ltstar_request path_planning_msgs/LTStarRequest`"
+    "    1. send path request: `rostopic pub /ltstar_request path_planning_msgs/LTStarRequest`\n",
+    "    \n",
+    "Check the date and time are correct\n",
+    "- `date +%Y%m%d -s \"20120418\"`\n",
+    "- `date +%T -s \"11:14:00\"`"
    ]
   },
   {
@@ -336,10 +371,20 @@
     "- RAM\n",
     "- Path length free space\n",
     "- Path lenght w/ obstacles: compare with manual measurement.\n",
-    "- Failure percentage\n",
-    "    - Naive max resolution neighbors\n",
-    "    - Different fractions of security margin\n",
-    "\n",
+    "- ~~Failure percentage~~\n",
+    "    - ~~Naive max resolution neighbors~~\n",
+    "    - ~~Different fractions of security margin~~\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Run plotly**\n",
     "1. Installation\n",
     "    1. `pip install plotly`\n",
