[ltstar] Conclusions from experiments.

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -397,6 +397,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Experimental Results'></a>\n",
+    "## 3 Experimental Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2018/08/21**      \n",
+    "Collected many runs.\n",
+    "Realized that the map deteriorates over time. Meaning the voxel separate instead of merging.\n",
+    "\n",
+    "\n",
+    "**2018/08/23**     \n",
+    "Collect video and some more runs.\n",
+    "As it is the UAV is not capable of integrating all the point clouds into the octree. Unclear if augmenting the resolution would help with voxels diverging.\n",
+    "\n",
+    "It is proven that the current implementations works if the voxels are merged.\n",
+    "\n",
+    "\n",
+    "###### Open Questions\n",
+    "\n",
+    "1. If all the laser scans are properly integrated in an octomap with finer resolution will it still diverge?\n",
+    "\n",
+    "2. Can the filters \n",
+    "    1. Be simplified to improve performance\n",
+    "    2. Incorporate a median filter to remove outliars. In order to reduce octomap divergence.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
