[jupyter] Insight of transformations for orthogonal planes.

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -128,7 +128,16 @@
     "\n",
     "Try the method using the cross product to generate an orthogonal vector. Can be pre generated at start and then applied to each point.\n",
     "\n",
-    "Add more distance to make sure of the margins also forward."
+    "Add more distance to make sure of the margins also forward.\n",
+    "\n",
+    "1. [The ortogonal coordinate frame can be found.](https://answers.ros.org/question/301060/how-to-use-tf-for-custom-rotation/)     \n",
+    "\n",
+    "2. And then compute the transformation from one to the other:\n",
+    "    - [StackOverflow question](https://stackoverflow.com/questions/15252919/how-to-find-the-transformation-matrix-of-a-change-of-basis-with-eigen/15277421)    \n",
+    "    - [Pcl implementation of question](https://github.com/PointCloudLibrary/pcl/blob/master/common/include/pcl/common/impl/eigen.hpp#L927)     \n",
+    "    - [Pcl docs of function](http://docs.pointclouds.org/1.7.2/a01420.html#a71ec11d4f29c5c8a5b6220c0838a294f)\n",
+    "    - [Pcl unit tests](https://github.com/PointCloudLibrary/pcl/blob/cc7fe363c6463a0abc617b1e17e94ab4bd4169ef/test/common/test_eigen.cpp#L1018)\n",
+    "    - ? How to know which is the corresponding x axis."
    ]
   },
   {
