[filters] Calculate octomap sensor_model parameters.

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -433,19 +433,19 @@
     "It is proven that the current implementations works if the voxels are merged.\n",
     "\n",
     "<a id='OpenQuestions'></a>\n",
-    "###### Open Questions\n",
+    "###### Filter Questions\n",
     "\n",
     "1. If all the laser scans are properly integrated in an octomap with finer resolution will it still diverge?   \n",
     "    **Yes**. When using a finer resolution it is apparent that one set of voxels that made the strutcture disapears to shitf to one side. This might be a precision problem because the RTK accuracy is only 0.9m or not if the accuracy of the RTK is only in respect to earth positioning and the diferencial between base and rover is always kept.\n",
     "\n",
     "2. Can the filters \n",
-    "    1. Be simplified (**yes**) to improve performance (?) \n",
-    "    2. Incorporate a median filter to remove outliars. In order to reduce octomap divergence.\n"
+    "    1. Be simplified (**yes**) to improve performance (yes) \n",
+    "    2. Incorporate a median filter to remove outliars. In order to reduce octomap divergence. - Median slows down. Replaced by a intensity filter combined with tweaked parameters of sensor_model/[hit|miss] for the octomap.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -454,12 +454,13 @@
        "1081"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Intensities sample\n",
     "import numpy as np\n",
     "\n",
     "\n",
@@ -467,6 +468,41 @@
     "np.histogram(intensities, bins=[0, 1, 300, 400, 500, 600, 700, 800, 900, 1000, 1100, 1200, 1300])\n",
     "\n",
     "len(intensities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Delta probability hit: 0.25\n",
+      "Delta probability miss: 0.016\n",
+      "sensor_model/hit: 0.75\n",
+      "sensor_model/miss: 0.484\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Calculation of sensor_model parameters\n",
+    "\n",
+    "obstacle_size = 0.2\n",
+    "resolution = 0.5\n",
+    "\n",
+    "delta_p_hit = 0.25 # € [0, 1] where 0 is very slow adding obstacles and 1 very fast\n",
+    "delta_p_miss = obstacle_size**3 * delta_p_hit / resolution**3\n",
+    "\n",
+    "print \"Delta probability hit: \" + str(delta_p_hit)\n",
+    "print \"Delta probability miss: \" + str(delta_p_miss)\n",
+    "\n",
+    "sensor_model_hit = 0.5 + delta_p_hit\n",
+    "sensor_model_miss = 0.5 - delta_p_miss\n",
+    "\n",
+    "print \"sensor_model/hit: \" + str(sensor_model_hit)\n",
+    "print \"sensor_model/miss: \" + str(sensor_model_miss)"
    ]
   },
   {
