--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -472,17 +472,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Delta probability hit: 0.25\n",
-      "Delta probability miss: 0.016\n",
-      "sensor_model/hit: 0.75\n",
-      "sensor_model/miss: 0.484\n"
+      "Delta probability hit: 0.35\n",
+      "Delta probability miss: 0.0224\n",
+      "sensor_model/hit: 0.85\n",
+      "sensor_model/miss: 0.4776\n"
      ]
     }
    ],
@@ -492,7 +492,7 @@
     "obstacle_size = 0.2\n",
     "resolution = 0.5\n",
     "\n",
-    "delta_p_hit = 0.25 # € [0, 1] where 0 is very slow adding obstacles and 1 very fast\n",
+    "delta_p_hit = 0.35 # € [0, 1] where 0 is very slow adding obstacles and 1 very fast\n",
     "delta_p_miss = obstacle_size**3 * delta_p_hit / resolution**3\n",
     "\n",
     "print \"Delta probability hit: \" + str(delta_p_hit)\n",
@@ -509,6 +509,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='ResultSets'></a>\n",
+    "###### Result sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scenarios:\n",
+    "1. Karting (describe karting)\n",
+    "    1. Size\n",
+    "    1. Flat terrain except for some obstacles\n",
+    "    1. Obstacles: \n",
+    "        1. large metallic structure (add picture) size x by x by x\n",
+    "        1. small tree\n",
+    "        1. many tires piled on the floor\n",
+    "        \n",
+    "1. Octrees\n",
+    "    1. 20180823_1110_raw collected at second 5 of bag 20180821_1110_manyRuns_karting_filterTfScan.bag . \n",
+    "    This was after scanning an area of x by x by x there was much dust in the run. \n",
+    "    1. 20180823_1110_filtered same bag and time point as previously but laser measurement intensity filter. Used only points with intensity € [0, 1] and [400, 2000].\n",
+    "    \n",
+    "- 20180821_1110_42712_raw.bt\n",
+    "- 20180821_1110_42936_raw.bt\n",
+    "- 20180821_1110_43042_raw.bt\n",
+    "- 20180821_1110_42712_filtered.bt --> too much dust\n",
+    "- 20180821_1110_42936_filtered.bt --> too much dust\n",
+    "- 20180821_1110_43042_filtered.bt --> too much dust\n",
+    "        \n",
+    "    \n",
+    "1. Testing conditions\n",
+    "    1. Live. The results were collected running the algorithm onboard the platform alongside data collection drivers, mapping generation and communication with px4.\n",
+    "    1. Hardware in the loop (hitl). The results were collected running the algorithm onboard the platform. Localization and mapping sourced from previous live flight.\n",
+    "    \n",
+    "1. Datasets   \n",
+    "Always safety margin of 2.5 to each side.\n",
+    "    1. 20180823_1110_raw ( -3.9; -14.76; 7) to (7.49; -6.98; 7) hitl\n",
+    "    1. 20180823_1110 filtered ( -3.9; -14.76; 7) to (7.49; -6.98; 7) hitl\n",
+    "    1. 20180823_1110_raw (7.49; -6.98; 7) to (-3.9; -14.76; 7) hitl\n",
+    "    2. 20180823_1110_filtered (7.49; -6.98; 7) to (-3.9; -14.76; 7) hitl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='Deterministic'></a>\n",
     "###### Deterministic"
    ]
@@ -517,8 +563,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run many times in different groups in different initial conditions.\n",
-    "1. 20180821_1110_manyRuns_karting_filterTfScan.bag at 500 bag time"
+    "For fixed:\n",
+    "- octree\n",
+    "- start\n",
+    "- goal\n",
+    "- margin\n",
+    "The output is always the same.\n",
+    "The average time in hitl is x standard deviation y\n",
+    "The average time is live is w standard deviation z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analysis of time in millis by lenght of output path in meters. buckets by 10 m\n",
+      " = 11.0 = \n",
+      "[1134]\n",
+      "Standard deviation: 0.0\n",
+      "Mean: 1134.0\n",
+      "Percentage: nan\n",
+      "Span: 0 millis\n",
+      " = 13.0 = \n",
+      "[51631, 51646, 51650, 51651, 51668, 51668, 51647, 51662, 51649, 51638, 23161, 23173, 23162, 23162, 23161, 23165, 23161, 23163, 23162, 23162, 16238, 16230, 16230, 16230, 16230, 16229, 16228, 16230, 16230, 16231]\n",
+      "Standard deviation: 15326.8858827\n",
+      "Mean: 30348.2666667\n",
+      "Percentage: 43.2474206623\n",
+      "Span: 35440 millis\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:61: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in double_scalars\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "exec(open(\"python/20180830_deterministic.py\").read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For each set of octree, start, goal and margin the output set of waypoints is always the same.\n",
+    "Each set was run x times.\n",
+    "The sets are those [above](#ResultSets)\n",
+    "The time the algorithm takes to reach the solution is 30348 millis +- 15326"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Path_lenght_variability'></a>\n",
+    "###### Path lenght variability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Switch start and end points.\n",
+    "- Keep start & end, change filter to non filter.\n",
+    "- Start & end points with similar obstacles."
    ]
   },
   {
