[data] Gather standard deviation.

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -583,28 +583,24 @@
      "output_type": "stream",
      "text": [
       "Analysis of time in millis by lenght of output path in meters. buckets by 10 m\n",
-      " = 11.0 = \n",
-      "[1134]\n",
-      "Standard deviation: 0.0\n",
-      "Mean: 1134.0\n",
-      "Percentage: nan\n",
-      "Span: 0 millis\n",
-      " = 13.0 = \n",
-      "[51631, 51646, 51650, 51651, 51668, 51668, 51647, 51662, 51649, 51638, 23161, 23173, 23162, 23162, 23161, 23165, 23161, 23163, 23162, 23162, 16238, 16230, 16230, 16230, 16230, 16229, 16228, 16230, 16230, 16231]\n",
-      "Standard deviation: 15326.8858827\n",
-      "Mean: 30348.2666667\n",
-      "Percentage: 43.2474206623\n",
-      "Span: 35440 millis\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:61: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in double_scalars\n",
-      "\n"
+      " = 20.0 = \n",
+      "Amount of data points 10\n",
+      "Standard deviation: 3634.78326727\n",
+      "Mean: 3957.0\n",
+      "Percentage: 35.684108259\n",
+      "Span: 10186 millis\n",
+      " = 30.0 = \n",
+      "Amount of data points 6\n",
+      "Standard deviation: 1794.37841296\n",
+      "Mean: 4688.33333333\n",
+      "Percentage: 44.837041803\n",
+      "Span: 4002 millis\n",
+      " = 50.0 = \n",
+      "Amount of data points 8\n",
+      "Standard deviation: 6863.0947454\n",
+      "Mean: 14320.625\n",
+      "Percentage: 36.6618309049\n",
+      "Span: 18720 millis\n"
      ]
     }
    ],
