--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -405,7 +405,8 @@
     "- Path lenght w/ obstacles: compare with manual measurement.\n",
     "- ~~Failure percentage~~\n",
     "    - ~~Naive max resolution neighbors~~\n",
-    "    - ~~Different fractions of security margin~~\n"
+    "    - ~~Different fractions of security margin~~\n",
+    "- Diffence in margin size on the path\n"
    ]
   },
   {
